# SDLGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/Source/: CMakeLists.txt  Startup.cpp
Engine/Source/Runtime/Core/: CMakeLists.txt
Engine/Source/Runtime/Core/Private/Math/: Transform.cpp
Engine/Source/Runtime/Core/Public/Math/: Transform.h  Vector.h
Engine/Source/Runtime/Core/Public/Misc/: CoreMiscDefines.h
Engine/Source/Runtime/Engine/: CMakeLists.txt
Engine/Source/Runtime/Engine/Classes/Components/: ActorComponent.h  SceneComponent.h
Engine/Source/Runtime/Engine/Classes/Engine/: Engine.h  EngineTypes.h  GameEngine.h  GameInstance.h  Level.h  LevelScriptActor.h  World.h
Engine/Source/Runtime/Engine/Classes/GameFramework/: Actor.h  Info.h  WorldSettings.h
Engine/Source/Runtime/Engine/Private/: Actor.cpp
Engine/Source/Runtime/Engine/Private/Components/: ActorComponent.cpp  SceneComponent.cpp
Engine/Source/Runtime/Engine/Private/Engine/: Engine.cpp  FakeEngine.cpp  GameEngine.cpp  GameInstance.cpp  Level.cpp  World.cpp
Engine/Source/Runtime/Engine/Public/: FakeEngine.h
Engine/Source/Runtime/EngineSettings/: CMakeLists.txt
Engine/Source/Runtime/EngineSettings/Classes/: GameMapsSetting.h
Engine/Source/Runtime/EngineSettings/Private/: EngineSettingsModule.cpp
Engine/Source/Runtime/Launch/: CMakeLists.txt  Launch.cpp
Engine/Source/Runtime/Launch/Private/: Launch.cpp  LaunchEngineLoop.cpp
Engine/Source/Runtime/Launch/Public/: LaunchEngine.h  LaunchEngineLoop.h
Example/: CMakeLists.txt  Startup.cpp  Startup.h
Game/: A.cpp  CMakeLists.txt  Math.h  SortWarePCH.h  TestGame.cpp  TestGame.h
Game/Include/: AppEngine.h  GameController.h  GameTimer.h  GraphicInterface.h  GraphicMath.h  Model.h  SortWarePCH.h  ThreadPool.h
Game/Src/: AppEngine.cpp  GameController.cpp  GraphicInterface.cpp  Model.cpp  TestGame.cpp
GameExample/: CMakeLists.txt
GameExample/Include/: MyAppEngine.h
GameExample/Src/: AppEngine.cpp  MyAppEngine.cpp
LuaGame/: CMakeLists.txt
LuaGame/Include/: LuaGamePCH.h
LuaGame/LuaSrc/: Startup.lua
LuaGame/Src/: Startup.cpp
SDLGameEngine/: CMakeLists.txt
SDLGameEngine/Include/: AppEngine.h  GameController.h  GameTimer.h  GraphicInterface.h  GraphicMath.h  Model.h  SoftWarePCH.h  Texture.h  ThreadPool.h  TickEngine.h  tgaimage.h
SDLGameEngine/Src/: AppEngine.cpp  GameController.cpp  GameTimer.cpp  GraphicInterface.cpp  GraphicMath.cpp  Model.cpp  Texture.cpp  tgaimage.cpp
SandBox/: CMakeLists.txt
SandBox/CppModule/: CMakeLists.txt
SandBox/CppModule/Include/: Startup.h
SandBox/CppModule/Src/: Startup.cpp
SandBox/LuaModule/: CMakeLists.txt
SandBox/LuaModule/Include/: LuaModulePCH.h
SandBox/LuaModule/LuaScripts/: luascript.lua
SandBox/LuaModule/Src/: main.cpp
TestGame/: CMakeLists.txt
TestGame/Include/: Model.h  MyAppEngine.h
TestGame/Src/: AppEngine.cpp  Model.cpp  MyAppEngine.cpp
UnitTest/: CMakeLists.txt  Startup.cpp
